[package]
name = "robot_language"
version = "0.1.0"
edition = "2021"
authors = ["David Doose <David.Doose@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
# pretty_env_logger = "0.4.0"
line-col = "0.2.1"
log = "0.4.0"
env_logger = "0.8.4"
z3 = "0.11.2"
clap = { version = "4.0.11", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.19.7", features = ["lexer"] }

[lib]
name = "rl"
path = "src/lib.rs"

[[bin]]
name = "check_ok"
path = "bin/check_ok.rs"

[[bin]]
name = "check_err"
path = "bin/check_err.rs"

[[bin]]
name = "robot_language"
path = "bin/main.rs"
